--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhrubo portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section class="top-banner">
+    <div class="half-width">
+        <h1>Welcome to</h1>
+        <h1> <span class="orange-color">Dhrubo kumar</span>  world!</h1>
+        <h3>A professional Digital marketer</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita exercitationem deleniti quia sapiente explicabo, tenetur sequi accusantium voluptatibus perferendis hic.</p>
+        <a class="Link-Button" target="_blank" href="https://www.facebook.com/drovo.kumar/">HIRE ME</a>
+    </div>
+    <div class="half-width">
+        <img src="dhrubo.png" alt="Dhrubo">
+    </div>
+</section>
 </body>
 </html>
