--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
         <img src="dhrubo.png" alt="Dhrubo">
     </div>
 </section>
+<section class="Dream-Big">
+<div class="half-width">
+<img src="dhrubo2.png" alt="">
+</div>
+<div class="half-width">
+<h1>Dream Big</h1>
+<h3>Become a Web Developer</h3>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, veniam animi fuga adipisci asperiores placeat quia voluptatum, quo dolor autem quaerat nisi architecto saepe nam quisquam debitis alias porro ipsum quis ipsam tempore. Libero provident dolorum sequi laborum, ipsam corrupti laudantium modi? Aliquid earum corporis alias, atque quibusdam quos quis!</p>
+<a class="Link-Button" target="_blank" href="https://www.facebook.com/">See My All Project</a>
+</div>
+</section>
 </body>
 </html>
