--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="top-banner">
+<section class="top-banner flexible-container">
     <div class="half-width">
         <h1>Welcome to</h1>
         <h1> <span class="orange-color">Dhrubo kumar</span>  world!</h1>
@@ -23,7 +23,7 @@
         <img src="dhrubo.png" alt="Dhrubo">
     </div>
 </section>
-<section class="Dream-Big">
+<section class="Dream-Big flexible-container">
 <div class="half-width">
 <img src="dhrubo2.png" alt="">
 </div>
@@ -32,6 +32,21 @@
 <h3>Become a Web Developer</h3>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, veniam animi fuga adipisci asperiores placeat quia voluptatum, quo dolor autem quaerat nisi architecto saepe nam quisquam debitis alias porro ipsum quis ipsam tempore. Libero provident dolorum sequi laborum, ipsam corrupti laudantium modi? Aliquid earum corporis alias, atque quibusdam quos quis!</p>
 <a class="Link-Button" target="_blank" href="https://www.facebook.com/">See My All Project</a>
+</div>
+</section>
+<section class="experience-area">
+    <h1>experiences</h1>
+<div class="flexible-container">
+    <div class="experienceitem">
+        <h2>Full Stack Marketer</h2>
+        <h3 class="pro">2019-Present | Pro level Marketer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem tenetur ullam. Quam est fugit ut exercitationem ratione alias dolorem?</p>
+    </div>
+    <div class="experienceitem">
+        <h2>Baby web Developer</h2>
+        <h3 class="pro">2019-2021 | Programing Hero Learner</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quisquam sequi consectetur error. Id porro maxime eveniet nostrum debitis accusantium?</p>
+    </div>
 </div>
 </section>
 </body>
