--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
 <section class="experience-area">
     <h1>experiences</h1>
 <div class="flexible-container">
-    <div class="experienceitem">
+    <div id="full" class="experienceitem">
         <h2>Full Stack Marketer</h2>
         <h3 class="pro">2019-Present | Pro level Marketer</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem tenetur ullam. Quam est fugit ut exercitationem ratione alias dolorem?</p>
     </div>
-    <div class="experienceitem">
+    <div id="web" class="experienceitem">
         <h2>Baby web Developer</h2>
         <h3 class="pro">2019-2021 | Programing Hero Learner</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quisquam sequi consectetur error. Id porro maxime eveniet nostrum debitis accusantium?</p>
     </div>
 </div>
 </section>
+<footer>
+    <p>© Dhrubo Kumar 2021</p>
+</footer>
 </body>
 </html>
